--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,7 +13,7 @@
 //@import "minima";
 
 @import "base";
-@import "layoutmin";
+//@import "layoutmin";
 @import "syntax-highlighting";
 
 // Provide our rules.
