--- a/_includes/getstarted_nav.html
+++ b/_includes/getstarted_nav.html
@@ -1,16 +1,13 @@
-
-
 {% for section in site.data.getstarted %}
         {% for item in section.getstarted %}
           {% assign item_url = item | prepend:"/getstarted/" | append:"/" %}
           {% assign p = site.getstarted | where:"url", item_url | first %}
 		  {% if item_url == page.url %}	
 			<div id="js-toc-fixed" class="toc js-toc">
-			</nav>
+			<nav/>
 			</div>		  
 		  {% else %}
           <li><a id=subsubmenu href="{{ item_url | prepend: site.baseurl }}">{{ section.title }}</a></li>
 		  {% endif %}		  
         {% endfor %}
 {% endfor %}
-
