--- a/_layouts/tools.html
+++ b/_layouts/tools.html
@@ -9,7 +9,7 @@ layout: defaultdev
         </div>
 
         <div class="col-md-8">
-            <div id="markdown-content-container"></div>
+            <div id="markdown-content-container"><div class="js-toc-content">{{ content }}</div></div>
             <br>
             <hr>
            <!-- {% include section_tools_nav.html %} -->
