Styling, spacing, responsiveness, changed getstarted and guides over tocbot, added left hand nav multi page support.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,14 @@
 <footer class="site-footer">
 
   <div class="container">
-
+    <br>
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <ul class="contact-list">
+        <ul class="contact-list" style="list-style:none;">
           <li>&copy; 2018 The Open Library Foundation</li>
         </ul>
       </div>
     </div>
   </div>
-  <div style="padding-bottom: 50em;"></div>
 </footer>
 
