--- a/_layouts/defaultintro.html
+++ b/_layouts/defaultintro.html
@@ -3,10 +3,8 @@
 
 {% include head.html %}
 
-<body>
-
-    {% include topnav.html %}
-    {% include topnavdev.html %}
+<body style="padding-top: 187px;">
+{% include topnav.html %}
     <main class="page-content" aria-label="Content">
         <div class="container">	
           <div class="row">
@@ -20,7 +18,7 @@
 		<div class="container">
 	<div class="row">
 	<div class="col-sm-8">
-	<h1 style="padding-left:12px">FOLIO COMMUNITY PARTNERS</h1><br>
+	<h2 style="padding-left:12px">FOLIO COMMUNITY PARTNERS</h1><br>
 	</div>
 	</div>	
    <div class="row">
