--- a/_sass/_folio-base.scss
+++ b/_sass/_folio-base.scss
@@ -1,6 +1,10 @@
 $base-font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-weight: 400;
 
+$screen-sm-min: 986px;
+$screen-md-min: 995px;
+
+
 $f-color-orange: #da6a2d;
 $f-color-purple: #38307f;
 $f-color-dark-grey: #515251;
