--- a/_includes/js_files.html
+++ b/_includes/js_files.html
@@ -2,26 +2,11 @@
 <script>
   var baseurl = '{{ site.baseurl }}'
 </script>
-<!-- <script src="{{ "/js/jquery.js" | prepend: site.baseurl }} "></script> -->
-<!--
-<script>
-  tocbot.init({
-    headingSelector: 'h1, h2, h3',
-    positionFixedSelector: '#js-toc-fixed'
-  });
-  $(function() {
-     $('h1, h2, h3').addClass('anchor');
-  });
-</script>
--->
-<!--<script src="https://cdn.jsdelivr.net/jquery/3.2.1/jquery.js"></script>-->
 
-<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }} "></script>-->
-
-
-
+<!--<script src="{{ "/js/main.js" | prepend: site.baseurl }} "></script> -->
+<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }} "></script>
 <script src="https://cdn.jsdelivr.net/npm/js-search@1.4.2/dist/umd/js-search.min.js"></script>
 <script src="{{ "/js/search-dev.js" | prepend: site.baseurl }}"></script>
 
-<script src="{{ "/js/main.js" | prepend: site.baseurl }} "></script>
+
 
