--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,4 +1,4 @@
-!-- Top Navigation Bar -->
+<!-- Top Navigation Bar -->
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
          <!-- Toggle for navbar - the top navigation bar -->  	
@@ -19,7 +19,8 @@
                         <i class="fa fa-search form-control-feedback"></i>
                     </div>
                 </form>
-                -->				
+                -->	
+                <div class="row">				
                 <ul class="nav navbar-nav navbar-right">
                     <li {% if page.sectionid=='overview' %} class="active" {% endif %}>
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Overview&nbsp;<span class="caret"></span></a>	
@@ -49,15 +50,20 @@
 				        <a href="{{ site.discussurl }}">Discussion Boards</a>
 				    </li>	
 					<li>
-					   <img height="22" width="22" style="margin-top: 12px; margin-right: 0px; margin-left: 10px; margin-bottom: 10px;" src="{{site.baseurl}}/images/github.png">				
+					   <img height="22" width="22" style="margin-top: 12px; margin-left: 10px; margin-bottom: 10px; margin-right: 30px;" src="{{site.baseurl}}/images/github.png">				
 					</li>						
                 </ul>
-				<br><br><br>
-				<hr style="background-color: #da6a2d; height: 2px">
-				<a class="navbar-brand" href=""><img height=18px src="{{site.baseurl}}/images/devlogo.png" ></a>
+				</div>
+				<hr style="height: 2px; background-color:#da6a2d; padding-right:15px;">
+				<div class="row">
+                <ul class="nav navbar-nav">
+				<li>
+					<a href=""><img height=18px src="{{site.baseurl}}/images/devlogo.png" ></a>
+				</li>
+                </ul>					
 				<ul class="nav navbar-nav navbar-right">
 					<li {% if page.sectionid=='getstarted' %} class="active" {% endif %}>
-					  <a href="{{ "/getstarted/gsinfo/" | prepend: site.baseurl }}">Getting Started</a>
+					  <a href="{{ "/getstarted/gsinfo/" | prepend: site.baseurl }}">Get Started</a>
 					</li>
 					<li {% if page.sectionid=='reference' %} class="active" {% endif %}>
 					  <a href="{{ "/reference/refinfo/" | prepend: site.baseurl }}">Reference</a>
@@ -88,6 +94,7 @@
                      </div>
                      </li>					 
 				</ul>
+				</div>
         </div>
     </div>
 </nav>
