--- a/_layouts/multipagedev.html
+++ b/_layouts/multipagedev.html
@@ -4,9 +4,7 @@
 {% include head.html %}
 
 <body>
-
-    {% include topnav.html %}
-    {% include topnavdev.html %}
+{% include topnav.html %}
     <main class="page-content" aria-label="Content">
         <div class="container">	
           <div class="row">
@@ -21,6 +19,7 @@
     {% include footer.html %}
     
 </body>
+
 <script>
   tocbot.init({
     headingSelector: 'h1, h2, h3',
@@ -30,10 +29,17 @@
      $('h1, h2, h3').addClass('anchor');
   });
 </script>
-<script src="https://cdn.jsdelivr.net/jquery/3.2.1/jquery.js"></script>
 
-<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }} "></script>
+<script>
+function myFunction() {
+    var x = document.getElementById("submenu");
+    if (x.className === "subnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "subnav";
+    }
+}
+</script>
 
-<script src="https://cdn.jsdelivr.net/npm/js-search@1.4.2/dist/umd/js-search.min.js"></script>
-<script src="{{ "/js/search-dev.js" | prepend: site.baseurl }}"></script>
+{% include js_files.html %}
 </html>
