--- a/_layouts/guidelines.html
+++ b/_layouts/guidelines.html
@@ -9,8 +9,13 @@ layout: multipagedev
         </div>
 
         <div class="col-md-8">
+            <div class="container">
+             <p class="space">
+             <div class="container"><ul id="searchResults"></ul></div>
+            </div>		
             <div id="markdown-content-container"><div class="js-toc-content">{{ content }}</div></div>
             <br>
+			<div style="padding-bottom: 50em;"></div>
             <hr>
             {% include section_guidelines_nav.html %}
         </div>
