--- a/_includes/guidelines_nav.html
+++ b/_includes/guidelines_nav.html
@@ -1,5 +1,6 @@
-
- <ul id=submenu>
+<ul id=submenu class="subnav">
+ <div id=multipage>
+ <a href="javascript:void(0);" style="font-size:18px; color: #333333; text-decoration: none; background-color: #da6a2d; padding-left: 175px; padding-right: 5px;" class="icon" onclick="myFunction()">&#9776;</a>
 {% for section in site.data.guidelines %}
         {% for item in section.guidelines %}
           {% assign item_url = item | prepend:"/guidelines/" | append:"/" %}
@@ -8,8 +9,9 @@
 		  <div id="js-toc">
 		  </div>	  
 		  {% else %}
-          <li><a id=subsubmenu href="{{ item_url | prepend: site.baseurl }}">{{ section.title }}</a></li>
+		  <li style="border-left-style: solid; border-left-color: #EEE;"><a id=subsubmenu href="{{ item_url | prepend: site.baseurl }}">{{ section.title }}</a></li>
 		  {% endif %}		  
         {% endfor %}
 {% endfor %}
+</div>
 </ul>
