Responsive and Styling changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
         <ul class="contact-list" style="list-style:none;">
           <li>&copy; 2018 The Open Library Foundation</li>
         </ul>
+		<div style="padding-bottom: 50em;"></div>
       </div>
     </div>
   </div>
