--- a/_sass/_folio-base.scss
+++ b/_sass/_folio-base.scss
@@ -1,9 +1,11 @@
 $base-font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-weight: 400;
 
+// Screen sizes
 $screen-sm-min: 986px;
 $screen-md-min: 995px;
 
+$max-menu-height: 100px;
 
 $f-color-orange: #da6a2d;
 $f-color-purple: #38307f;
