--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -88,7 +88,7 @@
 					</li>
 					<li>
                     <div class="form">
-					 <form action="get" id="searchDev">
+					 <form action="get" id="searchDev" onsubmit="parent.scrollTo(0,0); return true">
 								<input id="searchInput" type="text" class="form-control" placeholder="Search...">
 					 </form>		
                      </div>
