Add top nav links back

--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -37,7 +37,7 @@
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developers&nbsp;<span class="caret"></span></a>
                        <ul class="dropdown-menu">
                              <li><a href="{{ "/index" | prepend: site.baseurl }}">Documentation</a></li>
-			                 <li><a href="{{ "/source/overview" | prepend: site.baseurl }}">Source Code</a></li>
+			                 <li><a href="{{ "/source/components/" | prepend: site.baseurl }}">Source Code</a></li>
 					         <li><a href="https://folio-project.slack.com/messages/">Chat</a></li>
 					         <li><a href="https://slack-invitation.folio.org/">Chat (Sign Up)</a></li>
                              <li><a href="{{ site.issuesurl }}">Tracker</a></li>
