--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -19,6 +19,14 @@ code {
   background-color: $f-color-lighter-grey;
 }
 
+.attention {
+  border-color: $f-color-attention;
+  border-style: solid;
+  border-width: 1px 1px 1px 3px;
+  padding-left: 2px;
+  padding-right: 1px;
+}
+
 table {
   border-collapse: collapse;
 }
