Do not use self-closing element for toc

--- a/_includes/secondary-column.html
+++ b/_includes/secondary-column.html
@@ -13,6 +13,6 @@
 
 <div class="widget-separator"></div>
 <div id="js-toc-wrapper" class="toc js-toc">
-  <nav/>
+  <nav></nav>
 </div>
 <!-- end of include secondary-column.html -->
