--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -8,6 +8,17 @@ code.highlighter-rouge {
   background-color: $f-color-lighter-grey;
 }
 
+/*
+  The "overflow-x: auto" does not work well with "banner-position: top-fixed" ".anchor"
+  and when a pre code block is immediately before a "h*" heading.
+*/
+.highlight {
+  overflow-x: unset;
+}
+pre {
+  white-space: pre-wrap;
+}
+
 pre {
   padding-left: 2px;
   padding-right: 2px;
