--- a/_includes/folio-navbar.html
+++ b/_includes/folio-navbar.html
@@ -84,7 +84,7 @@
         <p class="code"><!-- will be filled by disclosure indicator --></p>
       </label>
       <div class="text">
-        <a href="http://dev.folio.org/"><p>Developers</p></a>
+        <a href="https://dev.folio.org/"><p>Developers</p></a>
       </div>
     </div>
     <div class="dropdown">
@@ -93,7 +93,7 @@
         <div class="title">
           <div class="symbol"><p></p></div>
           <div class="text">
-            <a href="http://dev.folio.org/doc/"><p>Documentation</p></a>
+            <a href="https://dev.folio.org/doc/"><p>Documentation</p></a>
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
         <div class="title">
           <div class="symbol"><p></p></div>
           <div class="text">
-            <a href="http://dev.folio.org/source-code/"><p>Source Code</p></a>
+            <a href="https://dev.folio.org/source-code/"><p>Source Code</p></a>
           </div>
         </div>
       </div>
