--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,7 @@
   
   <script src="https://cdn.jsdelivr.net/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tocbot@4.1.1/dist/tocbot.min.js"></script>
+  <script src="/assets/js/folio.js"></script>
   
   <!-- Include google analytics for production build and if necessary -->
   {% if jekyll.environment == 'production' and site.google_analytics %}
