Update content with the latest

--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -36,7 +36,7 @@
                     <li {% if page.sectionid=='developers' %} class="active" {% endif %}>
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developers&nbsp;<span class="caret"></span></a>
                        <ul class="dropdown-menu">
-                             <li><a href="http://dev.folio.org/">Documentation</a></li>
+                             <li><a href="https://dev.folio.org/">Documentation</a></li>
 			                 <li><a href="{{ "/source/components/" | prepend: site.baseurl }}">Source Code</a></li>
 					         <li><a href="https://folio-project.slack.com/messages/">Chat</a></li>
 					         <li><a href="https://slack-invitation.folio.org/">Chat (Sign Up)</a></li>
