separated glossary and api specifications back into two files

--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -66,7 +66,7 @@
 					  <a href="{{ "/getstarted/gsinfo/" | prepend: site.baseurl }}">Get Started</a>
 					</li>
 					<li {% if page.sectionid=='reference' %} class="active" {% endif %}>
-					  <a href="{{ "/reference/refinfo/" | prepend: site.baseurl }}">Reference</a>
+					  <a href="{{ "/reference/apispecifications/" | prepend: site.baseurl }}">Reference</a>
 					</li>
 					<li {% if page.sectionid=='source' %} class="active" {% endif %}>
 					  <a href="{{ "/source/components/" | prepend: site.baseurl }}">Code</a>
